更改小王老师

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <select class="multi_choice" multiple="">
   <option value="小阳老师">小阳老师</option>
   <option value="小王老师">小王老师</option>
-  <option value="小王老师">小王老师</option>
+  <option value="小张老师">小张老师</option>
   <option value="小李老师" selected="selected">小李老师</option>
 </select> 
 
